# permissions

./: CMakeLists.txt  LICENSE  README.md  main.cpp  permissions.cpp  permissions.h
